objects/RTAT_Wafer_Build_TAT__c.object
<CustomObject>
    <description>Lookup for Wafer Build Turn around Time (TAT) based on LOCATION_NAME, TECHNOLOGY, LEVELS_OF_METAL, RIT_TYPE, SPEED</description>
    <fields>
        <fullName>Levels_of_Metal__c</fullName>
        <description>Levels of Metal used</description>
        <label>Levels of Metal</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Sitle location where Wafer is being built, eg. Burlington</description>
        <label>Location Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIT_type__c</fullName>
        <description>RIT type (A, B, or AB)</description>
        <label>RIT type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <description>Different TAT speeds, depending on Lot size</description>
        <label>Speed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ROCKET</fullName>
                </value>
                <value>
                    <fullName>TURBO</fullName>
                </value>
                <value>
                    <fullName>RAMP</fullName>
                </value>
                <value>
                    <fullName>NTAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Technology of wafer to be built</description>
        <label>Technology</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waf_Bld_TAT__c</fullName>
        <description>Wafer Build Turn Around Time in days</description>
        <label>Waf Bld TAT</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>RTAT Wafer Build TAT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WBT-{0000}</displayFormat>
        <label>Wafer Build TAT Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTAT Wafer Build TATs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>